# my-flet-app

./: flet.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
