[project]
name = "briks"
version = "2.0.1" # Bumped to force a fresh install
description = "Briks CMMS - Industrial Maintenance Management System"
authors = [
    {name = "Okba"}
]
dependencies = [
    "flet>=0.82.2",
    "supabase",
    "openpyxl",
    "fpdf2",
    "httpx",
    "postgrest"
    # REMOVED pandas!
]

[tool.flet]
app-path = "main.py"

[tool.flet.android]
product-name = "Briks By Okba"
org = "com.briks.maintenance"

# FIXED: Changed from 'permissions' to 'permission'
[tool.flet.android.permission] 
"android.permission.INTERNET" = true
"android.permission.CAMERA" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
